Feedback applied on 'who we are' section

--- a/index.html
+++ b/index.html
@@ -31,62 +31,76 @@
 
       <main>
         <section class="section who-we-are" id="who-we-are">
-          <div class="section-heading">
-            <h2>Who We Are</h2>
-            <p class="section-subtitle">
-              Elevating Executive Delivery | Sustaining BAU | Defending Change
-              with Assurance
-            </p>
+          <div class="section-heading section-heading-with-logo">
+            <div class="heading-logo">
+              <img src="assets/images/hero-tree.png" alt="Robur Solaris logo" />
+            </div>
+            <div class="heading-copy">
+              <h2>Who We Are</h2>
+              <p class="section-subtitle">
+                Elevating Executive Delivery | Sustaining BAU | Defending Change
+                with Assurance
+              </p>
+            </div>
           </div>
-          <div class="section-body">
-            <p>
+          <div class="who-we-are-content">
+            <p class="intro-text">
               We are a specialist regulatory and financial crime compliance
               (FCC) advisory, founded by Shahriar Chowdhury — a senior compliance
-              leader with over 15 years’ experience across global banks,
+              leader with over 15 years' experience across global banks,
               high-growth startups, and agile delivery environments. We help
               institutions navigate regulatory change, uplift FCC frameworks, and
               embed sustainable controls across global and regional markets
             </p>
-
-            <h3>Our Background</h3>
-            <p>
-              Our experience spans large-scale regulatory uplift, operating model
-              design, governance framework, data-driven enterprise risk
-              assessments, and assurance, with a proven record of aligning
-              stakeholders across the three lines of defense and delivering
-              regulator-ready outcomes under scrutiny
-            </p>
-
-            <h3>Our Model</h3>
-            <p>
-              We combine hands-on senior involvement with a trusted network of
-              freelance regulatory compliance and FCC subject matter experts
-              (SMEs) — delivering scalable, regulator-ready solutions with
-              embedded change and enduring BAU capability. We come with sleeves
-              rolled up — ready to engage, deliver, and embed change where it
-              matters
-            </p>
-
-            <h3>Our Solutions</h3>
-            <p>
-              We safeguard senior executives by aligning program delivery through
-              governance, cadence, and cross-functional buy-in
-            </p>
-
-            <h3>Our Fees</h3>
-            <p>
-              Our fees are structured to reflect the depth of expertise and
-              delivery effort involved, supporting a sustainable and mutually
-              beneficial partnership
-            </p>
-
-            <h3>Our Work</h3>
-            <p>
-              We bring clarity, cadence, and control — enabling Heads of Risk,
-              Compliance, Financial Crime, MLROs, and transformation leaders to
-              deliver with confidence, operate Business as Usual (BAU) with
-              impact, and defend change with assurance
-            </p>
+            <table class="attributes-table">
+              <tbody>
+                <tr>
+                  <td class="attribute-label">Our Background</td>
+                  <td class="attribute-content">
+                    Our experience spans large-scale regulatory uplift, operating model
+                    design, governance framework, data-driven enterprise risk
+                    assessments, and assurance, with a proven record of aligning
+                    stakeholders across the three lines of defense and delivering
+                    regulator-ready outcomes under scrutiny
+                  </td>
+                </tr>
+                <tr>
+                  <td class="attribute-label">Our Model</td>
+                  <td class="attribute-content">
+                    We combine hands-on senior involvement with a trusted network of
+                    freelance regulatory compliance and FCC subject matter experts
+                    (SMEs) — delivering scalable, regulator-ready solutions with
+                    embedded change and enduring BAU capability. We come with sleeves
+                    rolled up — ready to engage, deliver, and embed change where it
+                    matters
+                  </td>
+                </tr>
+                <tr>
+                  <td class="attribute-label">Our Solutions</td>
+                  <td class="attribute-content">
+                    We safeguard senior executives by aligning program delivery through
+                    governance, cadence, and cross-functional buy-in
+                  </td>
+                </tr>
+                <tr>
+                  <td class="attribute-label">Our Fees</td>
+                  <td class="attribute-content">
+                    Our fees are structured to reflect the depth of expertise and
+                    delivery effort involved, supporting a sustainable and mutually
+                    beneficial partnership
+                  </td>
+                </tr>
+                <tr>
+                  <td class="attribute-label">Our Work</td>
+                  <td class="attribute-content">
+                    We bring clarity, cadence, and control — enabling Heads of Risk,
+                    Compliance, Financial Crime, MLROs, and transformation leaders to
+                    deliver with confidence, operate Business as Usual (BAU) with
+                    impact, and defend change with assurance
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </section>
 
