--- a/index.html
+++ b/index.html
@@ -52,55 +52,53 @@
               institutions navigate regulatory change, uplift FCC frameworks, and
               embed sustainable controls across global and regional markets
             </p>
-            <table class="attributes-table">
-              <tbody>
-                <tr>
-                  <td class="attribute-label">Our Background</td>
-                  <td class="attribute-content">
-                    Our experience spans large-scale regulatory uplift, operating model
-                    design, governance framework, data-driven enterprise risk
-                    assessments, and assurance, with a proven record of aligning
-                    stakeholders across the three lines of defense and delivering
-                    regulator-ready outcomes under scrutiny
-                  </td>
-                </tr>
-                <tr>
-                  <td class="attribute-label">Our Model</td>
-                  <td class="attribute-content">
-                    We combine hands-on senior involvement with a trusted network of
-                    freelance regulatory compliance and FCC subject matter experts
-                    (SMEs) — delivering scalable, regulator-ready solutions with
-                    embedded change and enduring BAU capability. We come with sleeves
-                    rolled up — ready to engage, deliver, and embed change where it
-                    matters
-                  </td>
-                </tr>
-                <tr>
-                  <td class="attribute-label">Our Solutions</td>
-                  <td class="attribute-content">
-                    We safeguard senior executives by aligning program delivery through
-                    governance, cadence, and cross-functional buy-in
-                  </td>
-                </tr>
-                <tr>
-                  <td class="attribute-label">Our Fees</td>
-                  <td class="attribute-content">
-                    Our fees are structured to reflect the depth of expertise and
-                    delivery effort involved, supporting a sustainable and mutually
-                    beneficial partnership
-                  </td>
-                </tr>
-                <tr>
-                  <td class="attribute-label">Our Work</td>
-                  <td class="attribute-content">
-                    We bring clarity, cadence, and control — enabling Heads of Risk,
-                    Compliance, Financial Crime, MLROs, and transformation leaders to
-                    deliver with confidence, operate Business as Usual (BAU) with
-                    impact, and defend change with assurance
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <dl class="attributes-list">
+              <div class="attribute">
+                <dt class="attribute-label">Our Background</dt>
+                <dd class="attribute-content">
+                  Our experience spans large-scale regulatory uplift, operating model
+                  design, governance framework, data-driven enterprise risk
+                  assessments, and assurance, with a proven record of aligning
+                  stakeholders across the three lines of defense and delivering
+                  regulator-ready outcomes under scrutiny
+                </dd>
+              </div>
+              <div class="attribute">
+                <dt class="attribute-label">Our Model</dt>
+                <dd class="attribute-content">
+                  We combine hands-on senior involvement with a trusted network of
+                  freelance regulatory compliance and FCC subject matter experts
+                  (SMEs) — delivering scalable, regulator-ready solutions with
+                  embedded change and enduring BAU capability. We come with sleeves
+                  rolled up — ready to engage, deliver, and embed change where it
+                  matters
+                </dd>
+              </div>
+              <div class="attribute">
+                <dt class="attribute-label">Our Solutions</dt>
+                <dd class="attribute-content">
+                  We safeguard senior executives by aligning program delivery through
+                  governance, cadence, and cross-functional buy-in
+                </dd>
+              </div>
+              <div class="attribute">
+                <dt class="attribute-label">Our Fees</dt>
+                <dd class="attribute-content">
+                  Our fees are structured to reflect the depth of expertise and
+                  delivery effort involved, supporting a sustainable and mutually
+                  beneficial partnership
+                </dd>
+              </div>
+              <div class="attribute">
+                <dt class="attribute-label">Our Work</dt>
+                <dd class="attribute-content">
+                  We bring clarity, cadence, and control — enabling Heads of Risk,
+                  Compliance, Financial Crime, MLROs, and transformation leaders to
+                  deliver with confidence, operate Business as Usual (BAU) with
+                  impact, and defend change with assurance
+                </dd>
+              </div>
+            </dl>
           </div>
         </section>
 
@@ -127,7 +125,7 @@
               </ul>
             </aside>
             <div class="deliverables-list">
-              <article class="deliverable has-icon">
+              <article class="deliverable">
                 <div class="deliverable-content">
                   <div class="deliverable-title-box">
                     <h4>Objective Health Checks &amp; Monitoring</h4>
@@ -152,7 +150,7 @@
                 </span>
               </article>
 
-              <article class="deliverable has-icon">
+              <article class="deliverable">
                 <div class="deliverable-content">
                   <div class="deliverable-title-box">
                     <h4>Operational Optimization</h4>
@@ -173,7 +171,7 @@
                 </span>
               </article>
 
-              <article class="deliverable has-icon">
+              <article class="deliverable">
                 <div class="deliverable-content">
                   <div class="deliverable-title-box">
                     <h4>Program &amp; Change Leadership</h4>
@@ -200,7 +198,7 @@
                 </span>
               </article>
 
-              <article class="deliverable has-icon">
+              <article class="deliverable">
                 <div class="deliverable-content">
                   <div class="deliverable-title-box">
                     <h4>Capability Building, Change Governance &amp; Metrics</h4>
@@ -226,7 +224,7 @@
                 </span>
               </article>
 
-              <article class="deliverable has-icon">
+              <article class="deliverable">
                 <div class="deliverable-content">
                   <div class="deliverable-title-box">
                     <h4>Regulatory Readiness incl. Documentation</h4>
