--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <img
             src="assets/images/hero-tree.png"
             alt="Illustrated tree representing Align, Optimize, Embed, Repeat"
+            width="433"
+            height="438"
+            decoding="async"
           />
         </figure>
         <div class="hero-text">
@@ -33,7 +36,14 @@
         <section class="section who-we-are" id="who-we-are">
           <div class="section-heading section-heading-with-logo">
             <div class="heading-logo">
-              <img src="assets/images/hero-tree.png" alt="Robur Solaris logo" />
+              <img
+                src="assets/images/hero-tree.png"
+                alt="Robur Solaris logo"
+                width="433"
+                height="438"
+                loading="lazy"
+                decoding="async"
+              />
             </div>
             <div class="heading-copy">
               <h2>Who We Are</h2>
@@ -53,51 +63,41 @@
               embed sustainable controls across global and regional markets
             </p>
             <dl class="attributes-list">
-              <div class="attribute">
-                <dt class="attribute-label">Our Background</dt>
-                <dd class="attribute-content">
-                  Our experience spans large-scale regulatory uplift, operating model
-                  design, governance framework, data-driven enterprise risk
-                  assessments, and assurance, with a proven record of aligning
-                  stakeholders across the three lines of defense and delivering
-                  regulator-ready outcomes under scrutiny
-                </dd>
-              </div>
-              <div class="attribute">
-                <dt class="attribute-label">Our Model</dt>
-                <dd class="attribute-content">
-                  We combine hands-on senior involvement with a trusted network of
-                  freelance regulatory compliance and FCC subject matter experts
-                  (SMEs) — delivering scalable, regulator-ready solutions with
-                  embedded change and enduring BAU capability. We come with sleeves
-                  rolled up — ready to engage, deliver, and embed change where it
-                  matters
-                </dd>
-              </div>
-              <div class="attribute">
-                <dt class="attribute-label">Our Solutions</dt>
-                <dd class="attribute-content">
-                  We safeguard senior executives by aligning program delivery through
-                  governance, cadence, and cross-functional buy-in
-                </dd>
-              </div>
-              <div class="attribute">
-                <dt class="attribute-label">Our Fees</dt>
-                <dd class="attribute-content">
-                  Our fees are structured to reflect the depth of expertise and
-                  delivery effort involved, supporting a sustainable and mutually
-                  beneficial partnership
-                </dd>
-              </div>
-              <div class="attribute">
-                <dt class="attribute-label">Our Work</dt>
-                <dd class="attribute-content">
-                  We bring clarity, cadence, and control — enabling Heads of Risk,
-                  Compliance, Financial Crime, MLROs, and transformation leaders to
-                  deliver with confidence, operate Business as Usual (BAU) with
-                  impact, and defend change with assurance
-                </dd>
-              </div>
+              <dt class="attribute-label">Our Background</dt>
+              <dd class="attribute-content">
+                Our experience spans large-scale regulatory uplift, operating model
+                design, governance framework, data-driven enterprise risk
+                assessments, and assurance, with a proven record of aligning
+                stakeholders across the three lines of defense and delivering
+                regulator-ready outcomes under scrutiny
+              </dd>
+              <dt class="attribute-label">Our Model</dt>
+              <dd class="attribute-content">
+                We combine hands-on senior involvement with a trusted network of
+                freelance regulatory compliance and FCC subject matter experts
+                (SMEs) — delivering scalable, regulator-ready solutions with
+                embedded change and enduring BAU capability. We come with sleeves
+                rolled up — ready to engage, deliver, and embed change where it
+                matters
+              </dd>
+              <dt class="attribute-label">Our Solutions</dt>
+              <dd class="attribute-content">
+                We safeguard senior executives by aligning program delivery through
+                governance, cadence, and cross-functional buy-in
+              </dd>
+              <dt class="attribute-label">Our Fees</dt>
+              <dd class="attribute-content">
+                Our fees are structured to reflect the depth of expertise and
+                delivery effort involved, supporting a sustainable and mutually
+                beneficial partnership
+              </dd>
+              <dt class="attribute-label">Our Work</dt>
+              <dd class="attribute-content">
+                We bring clarity, cadence, and control — enabling Heads of Risk,
+                Compliance, Financial Crime, MLROs, and transformation leaders to
+                deliver with confidence, operate Business as Usual (BAU) with
+                impact, and defend change with assurance
+              </dd>
             </dl>
           </div>
         </section>
@@ -105,7 +105,14 @@
         <section class="section deliverables" id="what-we-deliver">
           <div class="section-heading section-heading-with-logo">
             <div class="heading-logo">
-              <img src="assets/images/hero-tree.png" alt="Robur Solaris logo" />
+              <img
+                src="assets/images/hero-tree.png"
+                alt="Robur Solaris logo"
+                width="433"
+                height="438"
+                loading="lazy"
+                decoding="async"
+              />
             </div>
             <div class="heading-copy">
               <h2>What We Deliver</h2>
@@ -255,7 +262,14 @@
         <section class="section impact" id="how-we-drive-impact">
           <div class="section-heading section-heading-with-logo">
             <div class="heading-logo">
-              <img src="assets/images/hero-tree.png" alt="Robur Solaris logo" />
+              <img
+                src="assets/images/hero-tree.png"
+                alt="Robur Solaris logo"
+                width="433"
+                height="438"
+                loading="lazy"
+                decoding="async"
+              />
             </div>
             <div class="heading-copy">
               <h2>How We Drive Impact</h2>
