--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <img src="assets/images/hero-tree.png" alt="Robur Solaris Logo Tree" class="hero-logo" />
                 <div class="hero-text">
                     <h1>Robur Solaris</h1>
-                    <p class="hero-subtitle">Agile Regulatory Compliance & FCC Advisory</p>
-                    <p class="hero-description">Expert guidance for navigating regulatory change with confidence</p>
+                    <p class="hero-subtitle">Agile Regulatory Compliance & Financial Crime Compliance Advisory</p>
+                    <p class="hero-description">Regulatory Confidence. Operational Efficacy. Business Resilience.</p>
                 </div>
             </div>
         </header>
@@ -30,7 +30,6 @@
             <!-- Who We Are -->
             <section class="section" id="who-we-are">
                 <div class="section-header">
-                    <span class="section-label">About</span>
                     <h2>Who We Are</h2>
                     <p class="section-tagline">Elevating Executive Delivery | Sustaining BAU | Defending Change with Assurance</p>
                 </div>
@@ -70,7 +69,6 @@
             <!-- What We Deliver -->
             <section class="section section-alt" id="what-we-deliver">
                 <div class="section-header">
-                    <span class="section-label">Services</span>
                     <h2>What We Deliver</h2>
                     <p class="section-tagline">Scalable Optimization | Fit-for-Business Compliance | Sustainable BAU Change</p>
                 </div>
@@ -89,9 +87,7 @@
                 <div class="service-cards">
                     <div class="service-card">
                         <div class="service-icon">
-                            <svg viewBox="0 0 32 32">
-                                <polyline points="4 17 9 17 12 9 17 24 20 17 28 17"/>
-                            </svg>
+                            <img src="assets/icons/objective-health.png" alt="Objective Health Checks & Monitoring" />
                         </div>
                         <h3>Objective Health Checks & Monitoring</h3>
                         <p>Targeted diagnostics and control testing to validate regulatory readiness.</p>
@@ -99,10 +95,7 @@
 
                     <div class="service-card">
                         <div class="service-icon">
-                            <svg viewBox="0 0 32 32">
-                                <circle cx="16" cy="16" r="4.5"/>
-                                <path d="M16 7v3M16 22v3M9.4 9.4l2.1 2.1M20.5 20.5l2.1 2.1M7 16h3M22 16h3M9.4 22.6l2.1-2.1M20.5 11.5l2.1-2.1"/>
-                            </svg>
+                            <img src="assets/icons/operational-optimization.png" alt="Operational Optimization" />
                         </div>
                         <h3>Operational Optimization</h3>
                         <p>Faster client journeys, escalation clarity, agile workflow.</p>
@@ -110,11 +103,7 @@
 
                     <div class="service-card">
                         <div class="service-icon">
-                            <svg viewBox="0 0 32 32">
-                                <path d="M8 23c0-4.5 4-8 8-8s8 3.5 8 8"/>
-                                <circle cx="16" cy="11" r="4"/>
-                                <path d="M10 13l-3-3 3-3M22 13l3-3-3-3"/>
-                            </svg>
+                            <img src="assets/icons/program-change-leadership.png" alt="Program & Change Leadership" />
                         </div>
                         <h3>Program & Change Leadership</h3>
                         <p>Stakeholder alignment, disciplined execution, and audit-ready oversight — driving consensus and delivery cadence.</p>
@@ -122,12 +111,7 @@
 
                     <div class="service-card">
                         <div class="service-icon">
-                            <svg viewBox="0 0 32 32">
-                                <polyline points="6 22 12 16 16 19 26 9"/>
-                                <line x1="24" y1="9" x2="26" y2="9"/>
-                                <line x1="6" y1="22" x2="6" y2="24"/>
-                                <line x1="16" y1="19" x2="16" y2="24"/>
-                            </svg>
+                            <img src="assets/icons/capabililty.png" alt="Capability Building, Change Governance & Metrics" />
                         </div>
                         <h3>Capability Building, Change Governance & Metrics</h3>
                         <p>Targeted compliance training, BAU adoption, and governance-led delivery with measurable outcomes.</p>
@@ -135,11 +119,7 @@
 
                     <div class="service-card">
                         <div class="service-icon">
-                            <svg viewBox="0 0 32 32">
-                                <path d="M6 24h20"/>
-                                <path d="M10 24v-8h12v8"/>
-                                <path d="M8 16h16l-8-8z"/>
-                            </svg>
+                            <img src="assets/icons/regulatory-readiness.png" alt="Regulatory Readiness incl. Documentation" />
                         </div>
                         <h3>Regulatory Readiness incl. Documentation</h3>
                         <p>Defensible change narratives and documentation — ready for internal and external scrutiny.</p>
@@ -150,7 +130,6 @@
             <!-- How We Drive Impact -->
             <section class="section" id="how-we-drive-impact">
                 <div class="section-header">
-                    <span class="section-label">Approach</span>
                     <h2>How We Drive Impact</h2>
                     <p class="section-tagline">Scalable Optimization | Fit-for-Business Compliance | Sustainable BAU Change</p>
                 </div>
@@ -169,10 +148,7 @@
 
                     <div class="impact-card">
                         <h3>Fit-for-Business Compliance</h3>
-                        <ul>
-                            <li>We elevate what exists — no reinvention unless it's truly broken.</li>
-                            <li>We deliver agile governance and targeted optimization.</li>
-                        </ul>
+                        <p>We elevate what exists — no reinvention unless it's truly broken. We deliver agile governance and targeted optimization.</p>
                     </div>
 
                     <div class="impact-card">
@@ -191,6 +167,24 @@
                 </div>
             </section>
         </main>
+
+        <!-- Contact Section -->
+        <section class="section section-alt" id="get-in-touch">
+            <div class="contact-wrapper">
+                <div class="contact-logo-box">
+                    <img src="assets/images/hero-tree.png" alt="Robur Solaris Logo" class="contact-logo" />
+                </div>
+
+                <div class="contact-text-box">
+                    <h2>Get in Touch</h2>
+                    <p>We're here to discuss how Robur Solaris can help your organization navigate regulatory change with confidence and deliver sustainable compliance outcomes.</p>
+
+                    <div class="contact-email-section">
+                        <a href="mailto:rfi@robursolaris.com" class="contact-email-link">rfi@robursolaris.com</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Footer -->
         <footer class="site-footer">
