--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                 <div class="contact-text-box">
                     <h2>Get in Touch</h2>
-                    <p>We're here to discuss how Robur Solaris can help your organization navigate regulatory change with confidence and deliver sustainable compliance outcomes.</p>
+                    <p>Let's talk impact. Drop us a line</p>
 
                     <div class="contact-email-section">
                         <a href="mailto:rfi@robursolaris.com" class="contact-email-link">rfi@robursolaris.com</a>
