Revamp to new UI

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <!-- Hero Section -->
         <header class="hero">
             <div class="hero-content">
-                <img src="assets/images/hero-tree.png" alt="Robur Solaris Logo Tree" class="hero-logo" />
+                <div class="hero-logo-wrapper">
+                    <img src="assets/images/hero-tree.png" alt="Robur Solaris Logo Tree" class="hero-logo" />
+                    <p class="hero-tagline">Align | Optimize | Embed | Repeat</p>
+                </div>
                 <div class="hero-text">
                     <h1>Robur Solaris</h1>
                     <p class="hero-subtitle">Agile Regulatory Compliance & Financial Crime Compliance Advisory</p>
