--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Agile Regulatory & FCC Advisory by ROBUR SOLARIS</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Agile Regulatory Compliance & Financial Crime Compliance Advisory. Expert guidance on regulatory change, FCC frameworks, and sustainable controls." />
+    <meta name="keywords" content="regulatory compliance, financial crime compliance, FCC advisory, compliance consulting" />
+    <meta name="author" content="Robur Solaris" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://robursolaris.com/" />
+    <meta property="og:title" content="Robur Solaris - Agile Regulatory & FCC Advisory" />
+    <meta property="og:description" content="Agile Regulatory Compliance & Financial Crime Compliance Advisory. Regulatory Confidence. Operational Efficacy. Business Resilience." />
+    <meta property="og:image" content="https://robursolaris.com/assets/images/hero-tree.png" />
+    <meta property="og:image:alt" content="Robur Solaris Logo - Regulatory Compliance Advisory" />
+    <meta property="og:site_name" content="Robur Solaris" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://robursolaris.com/" />
+    <meta name="twitter:title" content="Robur Solaris - Agile Regulatory & FCC Advisory" />
+    <meta name="twitter:description" content="Agile Regulatory Compliance & Financial Crime Compliance Advisory. Expert guidance on regulatory change and compliance frameworks." />
+    <meta name="twitter:image" content="https://robursolaris.com/assets/images/hero-tree.png" />
+
+    <!-- Additional SEO Tags -->
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="canonical" href="https://robursolaris.com/" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
