--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <meta property="og:url" content="https://robursolaris.com/" />
     <meta property="og:title" content="Robur Solaris - Agile Regulatory & FCC Advisory" />
     <meta property="og:description" content="Agile Regulatory Compliance & Financial Crime Compliance Advisory. Regulatory Confidence. Operational Efficacy. Business Resilience." />
-    <meta property="og:image" content="https://robursolaris.com/assets/images/hero-tree.png" />
-    <meta property="og:image:alt" content="Robur Solaris Logo - Regulatory Compliance Advisory" />
+    <meta property="og:image" content="https://robursolaris.com/assets/images/social-preview.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:alt" content="Robur Solaris - Agile Regulatory & FCC Advisory" />
     <meta property="og:site_name" content="Robur Solaris" />
     <meta property="og:locale" content="en_US" />
 
@@ -26,7 +29,7 @@
     <meta name="twitter:url" content="https://robursolaris.com/" />
     <meta name="twitter:title" content="Robur Solaris - Agile Regulatory & FCC Advisory" />
     <meta name="twitter:description" content="Agile Regulatory Compliance & Financial Crime Compliance Advisory. Expert guidance on regulatory change and compliance frameworks." />
-    <meta name="twitter:image" content="https://robursolaris.com/assets/images/hero-tree.png" />
+    <meta name="twitter:image" content="https://robursolaris.com/assets/images/social-preview.png" />
 
     <!-- Additional SEO Tags -->
     <meta name="theme-color" content="#ffffff" />
